--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "description": "(WIP) Go implementation using HMR",
   "main": "index.js",
   "scripts": {
-    "serve": "go run main.go & watchify component-repository -d -t babelify -o public/js/bundle.component-repository.js",
-    "build": "npm run build-example & npm run build-client",
+    "serve": "go run main.go & npm run watch",
+
+    "watch": "npm run watch-example & npm run watch-client & npm run watch-component",
+    "watch-example": "NODE_PATH=$NODE_PATH:example watchify example -d -t babelify -o public/js/bundle.example.js",
+    "watch-component": "watchify component-repository  -d -t babelify -o public/js/bundle.component-repository.js",
+    "watch-client": "watchify client -d -t babelify -o public/js/bundle.client.js",
+
+    "build": "npm run build-example & npm run build-client & npm run build-component",
     "build-example": "NODE_PATH=$NODE_PATH:example browserify example -d -t babelify -o public/js/bundle.example.js",
+    "build-component": "browserify component-repository  -d -t babelify -o public/js/bundle.component-repository.js",
     "build-client": "browserify client -d -t babelify -o public/js/bundle.client.js"
   },
   "repository": {
